# miku-os

./: .gitignore  Cargo.toml  LICENSE  README.md  build.rs  grub.cfg  limine.conf  linker.ld
.cargo/: config.toml
.github/workflows/: release.yml
builder/: Cargo.toml
builder/src/: main.rs
docs/: English_README.md  Japanese_README.md  MikuOS_ABI.md  Russian_README.md
ld-miku/: Cargo.toml  ld_link.ld  x86_64-miku-ldso.json
libmiku/: Cargo.toml  libmiku_link.ld  x86_64-miku-lib.json
src/: allocator.rs  ata.rs  boot.rs  boot_entry.rs  color.rs  console.rs  dynlink.rs  elf.rs  elf_loader.rs  exec_elf.rs  font.rs  gdt.rs  gpt.rs  grub.rs  interrupts.rs  ldso.rs  limine.rs  main.rs  mmap.rs  pmm.rs  power.rs  process.rs  random.rs  reloc.rs  ring3.rs  scheduler.rs  serial.rs  shell.rs  solib.rs  stdin.rs  swap.rs  swap_map.rs  syscall.rs  timing.rs  user_stdin.rs  vfs_read.rs  vmm.rs
src/commands/: disk_cmds.rs  ext2_cmds.rs  ext3_cmds.rs  ext4_cmds.rs  ext_cmds_common.rs  fs.rs  mkfs_cmds.rs  mod.rs  system.rs
src/fs/ext2/: bitmap.rs  dir.rs  inode_ops.rs  journal.rs  mod.rs  reader.rs  write.rs
src/lib/ld_miku/: elf.rs  loader.rs  (+4 more)
src/miku_extfs/: cache.rs  error.rs  mod.rs  ops.rs  reader.rs  structs.rs
src/mkfs/: format.rs  layout.rs  mod.rs  params.rs
src/net/: arp.rs  dhcp.rs  dns.rs  e1000.rs  eth.rs  http.rs  http2.rs  icmp.rs  ipv4.rs  mod.rs  ntp.rs  pci.rs  rtl8139.rs  rtl8168.rs  tcp.rs  tcp_listener.rs  tls.rs  tls_bignum.rs  tls_crypto.rs  tls_ecdh.rs  tls_gcm.rs  tls_rsa.rs  traceroute.rs  udp.rs  virtio.rs
src/vfs/: address_space.rs  bio.rs  block_dev.rs  cas.rs  children.rs  core.rs  dentry.rs  devfs.rs  fd.rs  hash.rs  journal.rs  locks.rs  lru.rs  mod.rs  mount.rs  notify.rs  ops.rs  pages.rs  path.rs  permissions.rs  procfs.rs  quota.rs  security.rs  slab.rs  syscall.rs  tmpfs.rs  transaction.rs  types.rs  version.rs  vnode.rs  xattr.rs
(+37 files in other folders)
